--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,9 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet", href="/stylesheets/all.css")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
   body
     block content
     script(src="/javascripts/index.js") 
+    script(src="/javascripts/all.js") 
