Refactoriza eventos: index.js

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,9 +1,9 @@
 extends layout
 
 block content
-  .form
+  form.form#form
     input#search(type="text", name="search" required)
-    button#call 
+    button#call(type="submit") 
       i.fas.fa-search
   .container 
     .col
